fixing JOBAD and CSS visibility works, flattening kind-of works
git-svn-id: https://svn.kwarc.info/repos/MMT/src@1582 09069c07-60fa-4895-8316-727242e252e4

--- a/mmt-api/trunk/resources/mmt-web/css/browser.css
+++ b/mmt-api/trunk/resources/mmt-web/css/browser.css
@@ -4,7 +4,7 @@ body {
  margin-top: 0px;
  margin-left:0px;
  margin-right:0px;
- background: #eeeeee;
+ background: white;
 }
 
 #top {
@@ -82,11 +82,11 @@ span.crumb {
 #sidebar {
    background: lightgray;
    position: absolute;
-   overflow: auto;
+   overflow: scroll;
    top: 110px;
    left: 0;
    width: 250px;
-   resize: horizontal;
+   resize: both;
 }
 
 #pathtree {
